# nyc-taxi-price-prediction

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  V  docker-compose.yml  env.yml  logging.config  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  run_flow-deployment.yaml  setup.cfg  setup.py  test_reqirements.txt  test_requirements.txt  tox.ini
.dvc/: config
api/: main.py  routes.py
api/schema/: api_schema.py
batch_deploy/: batch_score.py  deployment.py  score.ipynb  utilities.py
deployment/batch_deploy/: batch_score.py  score.ipynb
docs/: index.md
docs/src/: train.md
docs/src/api/: routes.md
exp_tracking/: README.md  experiment_tracking.py  mlflow.db
infrastructure/: README.md  main.tf  variables.tf
infrastructure/modules/kinesis/: variables.tf
infrastructure/modules/lambda/: main.tf  variables.tf
model_deployment/: __init__.py
model_deployment/batch_deploy/: README.md  batch_score.py  deployment.py  utilities.py
model_deployment/streaming/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  lambda_function.py  requirements.txt  run.sh  run_docker.py  test_docker.py  train_model.py
model_monitoring/: .gitignore  README.md  batch_monitor.py  check_mongodb.py  curr.csv  docker-compose.yml  drift_quality_report.html  feat_engineering.py  prepare.py  reduced_data.parquet  reduced_data.parquet.dvc  ref.csv  regression_report.html  requirements.txt  send_data.py  target.csv  target.csv.dvc  yellow_tripdata_2022-01.parquet.dvc
model_monitoring/evidently_service/: Dockerfile  app.py  config.yml  datasets.dvc  flask_app.py  requirements.txt
model_monitoring/evidently_service/datasets/: reduced_data.parquet
model_monitoring/prediction_service/: Dockerfile  app.py  requirements.txt  utilities.py
proj/src/api/: __init__.py
proj/src/config/: core.py  schema.py
proj/tests/: test_feature_engineering.py
src/: README.md  __init__.py  blx.py  config.yml  data.dvc  deployments.py  models.dvc  my_flow.py  ochestrate.py  orchestrate.py  pipeline.py  predict.py  train.py
src/api/: __init__.py  config.py  main.py  routes.py
src/api/schema/: __init__.py  api_schema.py
src/config/: core.py  schema.py
src/models/: regression_pipe.joblib
src/processing/: data_manager.py  feat_engineering.py
src/utilities/: experiment.py
tests/: conftest.py  encoded_data.txt  make_pred.py  test_api.py  test_data_manager.py  test_demo.py  test_feature_engineering.py  test_flow.py  test_lambda.py  test_predictions.py  test_train.py  utilities.py
tests/integration/: .dockerignore  Dockerfile  app.py  lambda_function.py  run.sh  test_docker_integration.py  train_model.py
tests/integration/trained_models/: model.pkl
