[metadata]
name = src # package name
version = VERSION
description = This is a simple package
author = Neidu
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[project.urls]
"Homepage" = "https://github.com/chineidu/nyc-taxi-price-prediction"

[options]
packages =
    src
install_requires =
    fastparquet==0.5.0
    feature-engine==1.5.2
    mlserver-mlflow==1.2.0
    pip-chill==1.0.1
    prefect==2.7.3
    scikit-learn==1.2.0
    tox==4.0.0

python_requires = >=3.7
# package_dir =
    # =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
src = py.typed

[flake8]
max-line-length = 130