[metadata]
name = src # package name
# Sync with proj/src/VERSION
version = 0.0.4  
description = This is a simple package
author = Chinedu Ezeofor
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[project.urls]
"Homepage" = "https://github.com/chineidu/nyc-taxi-price-prediction"

[options]
packages =
    src
install_requires =
    feature-engine==1.5.2
    mlserver-mlflow==1.2.0
    pip-chill==1.0.1
    prefect==2.7.3
    scikit-learn==1.2.0
    
python_requires = >=3.7
package_dir =
    =proj
zip_safe = no
include_package_data = True

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
src = py.typed

[flake8]
ignore = D203, W503, F401
exclude =
    .git,
    __pycache__,
    src/__init__.py, # ignore unused imports
    src/api/__init__.py, 
    src/api/schema__init__.py,
    old,
    build,
    dist
max-complexity = 10
max-line-length = 130

